Chaged some folder organization

--- a/Kmeans_thingsboard/platformio.ini
+++ b/Kmeans_thingsboard/platformio.ini
@@ -12,11 +12,26 @@
 platform = espressif32
 board = esp32-s3-devkitc-1
 framework = arduino
+monitor_speed = 115200
+
+;gets SPIFFS to work for OTA
+
+board_build.filesystem = spiffs
+board_build.partitions = default_8MB.csv
+board_build.mcu = esp32s3
+board_upload.upload_flags= --erase-all
+
+;Library options
 lib_extra_dirs = ~/Documents/Arduino/
 lib_deps = 
 	SPI.h,Arduino.h,Wire.h
 	knolleary/PubSubClient@^2.8
-	arduino-libraries/ArduinoHttpClient@^0.6.0
+	arduino-libraries/ArduinoHttpClient@^0.6.1
 	bxparks/AceSorting@^1.0.0
 	thingsboard/ThingsBoard@^0.13.0
-monitor_speed = 115200
+
+;rename .bin file
+build_flags =
+    -DVERSION=${this.custom_prog_version}
+extra_scripts = pre:rename_bin.py
+custom_prog_version = Kmeans
